2005-01-30  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_set_audio_out_type):
	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_can_set_volume),
	(bacon_video_widget_set_audio_out_type):
	* src/bacon-video-widget.h:
	* src/totem-preferences.c: (totem_prefs_set_show_visuals),
	(audio_out_menu_changed):

	Make bacon_video_widget_set_audio_out_type return whether the
	application needs to restart for this to take effect, the xine-lib
	backend also now knows that the AC3 passthrough output can't set
	the volume (Closes: #122580)

2005-01-30  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: fix typo that made the nautilus-extension test
	useless (Closes: #165630)

2005-01-30  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_get_languages): Patch from Nickolay V. Shmyrev
	<nshmyrev@yandex.ru> to handle unnamed sound channels, for multi-audio
	AVI files (Closes: #164741)

2005-01-30  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* data/uri.glade: change the name of the history ID to totem
	* src/totem.c: (on_open_location1_activate): save the used URI in
	the entry's history, prompting a save to GConf. Fixes the
	"Open Location..." being always empty (Closes: #153675)

2005-01-29  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: fix the maximum value of the GtkAdjustments not
	being respected after reading the note in the docs for
	gtk_adjustment_set_value()

2005-01-29  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (load_video_out_driver),
	(load_audio_out_driver), (bacon_video_widget_realize),
	(bacon_video_widget_new), (bacon_video_widget_can_set_volume):
	use the none audio and video drivers so that the decoders are used
	and can set metadata (Closes: #165483)

2005-01-28  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (caps_set), (parse_stream_info),