@@ -1,3 +1,8 @@
+2005-02-03  Bastien Nocera  <hadess@hadess.net>
+
+	* src/Makefile.am: fix regenerate-built-sources
+	* src/egg-*: update from libegg CVS
+
 2005-01-30  Bastien Nocera  <hadess@hadess.net>
 
 	* src/bacon-video-widget-gst.c:
